<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="able_record">还可录音</string>
    <string name="about_moment">关于好友圈</string>
    <string name="about_settings">关于%1$s</string>
    <string name="about_settings_default">关于</string>
    <string name="above_grade_format">%1$s级以上</string>
    <string name="advert_word">广告</string>
    <string name="agree">同意</string>
    <string name="ai_text">AI美文</string>
    <string name="all_friends_able_visible">公开</string>
    <string name="all_friends_able_visible_details">所有好友可见</string>
    <string name="allow">允许</string>
    <string name="allow_moment_permission">"允许“好友圈”获取以下权限？
"</string>
    <string name="allow_weichat_permission">"允许“微聊”获取以下权限？
"</string>
    <string name="app_download_content">使用此功能需要下载并安装“%1$s”app</string>
    <string name="app_download_description">应用下载说明</string>
    <string name="app_name">好友圈</string>
    <string name="app_update_version_low">应用中心版本过低，请先前往升级</string>
    <string name="aquarius">水瓶座</string>
    <string name="aries">白羊座</string>
    <string name="asr_result_is_null">语音识别结果为空</string>
    <string name="assistant_start_app">正在打开%s</string>
    <string name="badge_num_format">%s枚</string>
    <string name="badge_wall">徽章墙</string>
    <string name="banned_words">由于发布不良信息已被官方禁言%s天</string>
    <string name="banner_detail_hint">禁言期间，无法发布好友圈动态，也无法点赞和评论。</string>
    <string name="banner_detail_time_hint">即日起至%s。</string>
    <string name="banner_effect">禁言范围</string>
    <string name="banner_reason">禁言原因</string>
    <string name="banner_time">禁言时间</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">确定</string>
    <string name="can_be_viewed_in_moment">可在好友圈中查看</string>
    <string name="can_not_praises_more">不能点赞更多了</string>
    <string name="cancel">取消</string>
    <string name="cancel_btn_text">取消</string>
    <string name="cancel_share">取消</string>
    <string name="cancer">巨蟹座</string>
    <string name="capricornus">摩羯座</string>
    <string name="certen_btn_text">确定</string>
    <string name="change_defate">修改失败</string>
    <string name="change_success">修改成功</string>
    <string name="change_visible_limit">可修改的次数达到上限，明天再试吧~</string>
    <string name="change_visible_range_btn">修改可见范围</string>
    <string name="chat_scene">微聊</string>
    <string name="choice_report_content">请选择举报内容：</string>
    <string name="choose_friends_able_see">选中的好友%1$s能看见%2$s该动态</string>
    <string name="choose_friends_unable_see">选中的好友%1$s看不见%2$s该动态</string>
    <string name="chose_correct">确认</string>
    <string name="click_screen_to_send">点击屏幕发送</string>
    <string name="click_to_load_more">点击加载更多</string>
    <string name="close_advert">关闭广告</string>
    <string name="close_switch_tip">功能暂不可用</string>
    <string name="comma">、</string>
    <string name="comment">评论</string>
    <string name="comment_delete_hint">这条评论已删除</string>
    <string name="common_i_know">我知道了</string>
    <string name="community_conversation">社区公约</string>
    <string name="complete">完成</string>
    <string name="contact_head_dislocation_tag">头像地址防错位TAG</string>
    <string name="contact_head_last_update_tag">头像更新时间相同不做二次加载TAG</string>
    <string name="contact_permission">位置信息</string>
    <string name="contact_permission_desc">使用GPS、无线局域网热点以及基站获取位置信息</string>
    <string name="content_is_delete_report_fail">内容已删除，举报失败</string>
    <string name="content_is_null">发布内容不能为空</string>
    <string name="content_is_over">输入字数到限</string>
    <string name="cta_allow_permission">使用{0}需向你申请以下权限：</string>
    <string name="cta_allow_permission_multi_entry_app">使用{0}及其他同类应用需向你申请以下权限：</string>
    <string name="cta_allow_permission_pre_icon">使用{0}需向你申请应用中心权限：</string>
    <string name="cube_ptr_hours_ago"> 小时之前</string>
    <string name="cube_ptr_last_update">上次更新: </string>
    <string name="cube_ptr_load_more">上拉加载更多…</string>
    <string name="cube_ptr_loading">加载中…</string>
    <string name="cube_ptr_minutes_ago"> 分钟之前</string>
    <string name="cube_ptr_pull_down">下拉</string>
    <string name="cube_ptr_pull_down_being_refresh">正在更新…</string>
    <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
    <string name="cube_ptr_refresh_complete">更新完成.</string>
    <string name="cube_ptr_refreshing">加载中…</string>
    <string name="cube_ptr_release_to_refresh">释放刷新</string>
    <string name="cube_ptr_seconds_ago"> 秒之前</string>
    <string name="delete">删除</string>
    <string name="delete_fail">删除失败</string>
    <string name="delete_friend">删除好友</string>
    <string name="dialog_share_video_duration" formatted="false">%s:%s</string>
    <string name="disagree">不同意</string>
    <string name="dont_show_location">不显示位置</string>
    <string name="down_all_friends_able_see">该动态所有好友可见</string>
    <string name="down_friends_able_see">仅以下好友%1$s能看见%2$s该动态</string>
    <string name="down_friends_unable_see">以下好友%1$s看不见%2$s该动态</string>
    <string name="down_onlyme_see">该动态仅自己可见</string>
    <string name="down_version">对方手表版本太低， 暂时看不到你的评论</string>
    <string name="download_dec_title">应用下载说明</string>
    <string name="download_personal_center">使用该应用时需要先下载并安装个人中心app</string>
    <string name="ensure">确定</string>
    <string name="exit">退出</string>
    <string name="exit_redact">你还没编辑动态噢，\u0009确认退出本次编辑吗</string>
    <string name="exit_remind">退出提醒</string>
    <string name="first_lbs_tip">可点击下方定位进行评价噢</string>
    <string name="frequent_request">勿频繁操作</string>
    <string name="frequent_request_new">操作太快啦，让我喘口气</string>
    <string name="friend_delete_failed">删除失败</string>
    <string name="friend_delete_success">删除成功</string>
    <string name="friend_moments">圈动态</string>
    <string name="friend_public">个人动态</string>
    <string name="friends_list_show">等%s位好友</string>
    <string name="gemini">双子座</string>
    <string name="genius_number">天才号: %s</string>
    <string name="genius_number_introduce">天才号是你的永久号，可用于登录新设备、授权儿童应用、交友、恢复数据等等。</string>
    <string name="get_contact_info">读取联系人信息</string>
    <string name="get_location_info">获取位置信息</string>
    <string name="get_praise_fail">获取点赞列表失败</string>
    <string name="go_to_download">去下载</string>
    <string name="goto_permission">前往授权</string>
    <string name="hand_writing_input_view">手写输入界面</string>
    <string name="high_risk_hint_content">你发布的内容多次违反《小天才社区公约》，平台已清除该内容，请注意发言规范。若继续发布不适宜内容，将面临禁言处理。</string>
    <string name="high_risk_hint_tittle">温馨提示</string>
    <string name="hours_ago"> 小时之前</string>
    <string name="http_user_hint">https://static.watch.okii.com/watch/privacy_explain/index.html?type=2</string>
    <string name="https_privacy">https://static.watch.okii.com/watch/privacy_explain/index.html</string>
    <string name="i_agree">同意</string>
    <string name="i_have_objection">我有疑问？</string>
    <string name="i_known">我知道了</string>
    <string name="image_invalid">图片已过期</string>
    <string name="info_real_name">真实姓名：%s</string>
    <string name="install_web_core_tip">当前页面加载失败，请升级系统版本或前往应用中心搜索并下载“系统网页浏览”后再试</string>
    <string name="integral">积分</string>
    <string name="ipc_information">ICP备案号</string>
    <string name="ipc_information_extra">无</string>
    <string name="open_source_license">开源协议</string>
    <string name="open_source_license_extra">GPLv3 or later</string>
    <string name="last_update">上次更新: </string>
    <string name="lbs_friend_star_label">{0}个好友</string>
    <string name="lbs_friend_star_label1">推荐过这里</string>
    <string name="lbs_i_star_label">{0}觉得这里</string>
    <string name="lbs_star_1">很一般</string>
    <string name="lbs_star_2">一般吧</string>
    <string name="lbs_star_3">还不错</string>
    <string name="lbs_star_4">很赞呢</string>
    <string name="lbs_star_5">超赞耶</string>
    <string name="lbs_star_detail">位置评价</string>
    <string name="lbs_star_success">评价成功</string>
    <string name="lbs_star_title">评价一下这里吧~</string>
    <string name="lbs_tip">"来这里发布位置动态
也可参与评价喔~"</string>
    <string name="lbs_tip1">打个卡吧</string>
    <string name="leo">狮子座</string>
    <string name="level">等级</string>
    <string name="level_of_praises">每天给同一好友的点赞数对应等级如下：</string>
    <string name="level_section_format">%1$s级~%2$s级</string>
    <string name="libra">天秤座</string>
    <string name="like_error">点赞失败，请检查网络</string>
    <string name="line_length_holder">一二三四五六七八九十</string>
    <string name="listening_text">正在聆听，请说话...</string>
    <string name="loadMore">加载中…</string>
    <string name="load_complete">已经加载完毕</string>
    <string name="load_fail">加载失败，请检查网络</string>
    <string name="loading">拼命加载中~</string>
    <string name="loading_delete">正在删除</string>
    <string name="loading_now">正在加载中…</string>
    <string name="locate_failed">获取位置信息失败</string>
    <string name="location">签到</string>
    <string name="me">我</string>
    <string name="message_send">发送</string>
    <string name="minutes_ago"> 分钟之前</string>
    <string name="moment_already_deleted">好友已删除该动态</string>
    <string name="moment_scene">好友圈</string>
    <string name="photo">相册</string>
    <string name="picture">拍照</string>
    <string name="privacy">隐私政策</string>
    <string name="string_ai_num_tip">今日创作次数：</string>
    <string name="string_ai_text_hint">输入内容，AI美文将为你美化，让语句更加优美哦</string>
    <string name="string_barrage">弹幕</string>
    <string name="string_edit_record">创作记录</string>
    <string name="string_edit_record_gallery">我的AI写作集</string>
    <string name="string_egg">臭鸡蛋</string>
    <string name="string_flower">鲜花</string>
    <string name="string_move_continue">继续生成</string>
    <string name="string_move_exit">直接退出</string>
    <string name="string_move_tip">AI美文生成中，退出后可能导致生成失败，确定要退出吗?</string>
    <string name="string_start_cover">开始美化</string>
    <string name="string_take_same_video">拍同款</string>
    <string name="video">小视频</string>
</resources>