<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:layout_width="@dimen/dp_152" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_4" android:text="@string/string_move_tip" />
    <TextView android:textSize="17.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_continue" android:background="@drawable/bg_text_next" android:layout_width="@dimen/dp_150" android:layout_height="@dimen/dp_40" android:layout_marginTop="@dimen/dp_30" android:text="@string/string_move_continue" />
    <TextView android:textSize="17.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_exit" android:background="@drawable/bg_text_exit" android:layout_width="@dimen/dp_150" android:layout_height="@dimen/dp_40" android:layout_marginTop="@dimen/dp_4" android:text="@string/string_move_exit" />
</LinearLayout>
