<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="18.0sp" android:textColor="#fffebb33" android:layout_gravity="center_horizontal" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/lbs_star_detail" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/v_bg" android:background="@drawable/default_list_item_normal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="38.0dip" app:layout_constraintBottom_toBottomOf="@id/tv_friend_label" app:layout_constraintHeight_min="55.0dip" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="14.0sp" android:textColor="@color/color_white" android:id="@id/tv_i_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/lbs_i_star_label" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" />
    <TextView android:textSize="14.0sp" android:textColor="#fffebb33" android:id="@id/tv_friend_label" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/lbs_friend_star_label" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_i_label" app:layout_goneMarginTop="24.0dip" />
    <TextView android:textSize="13.0sp" android:textColor="@color/color_white" android:gravity="center" android:id="@id/tv_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/lbs_tip" android:alpha="0.5" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
