<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/bg_common_blur" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rl_scene" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/ll_chat_scene" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="4.0dip">
            <com.xtc.shareapi.share.view.AppLinearLayout android:id="@id/iv_chat_scene" android:background="@drawable/ic_share_chat" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="13.0sp" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/chat_scene" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/ll_moment_scene" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="28.0dip" android:layout_toEndOf="@id/ll_chat_scene">
            <com.xtc.shareapi.share.view.AppLinearLayout android:id="@id/iv_moment_scene" android:background="@drawable/ic_share_moment" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="13.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/moment_scene" />
        </LinearLayout>
    </RelativeLayout>
    <Button android:textSize="15.0sp" android:textColor="#99ffffff" android:id="@id/bt_cancel_share" android:background="@drawable/cancel_btn_bg" android:layout_width="wrap_content" android:layout_height="32.0dip" android:maxWidth="150.0dip" android:minWidth="80.0dip" android:text="@string/cancel_share" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>
