<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/color_black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/rl_dialog_one_btn" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/rl_dialog_album" android:background="@drawable/bg_three_icon" android:layout_width="fill_parent" android:layout_height="@dimen/dp_60" android:layout_marginLeft="@dimen/dp_6" android:layout_marginTop="@dimen/dp_5">
            <ImageView android:id="@id/iv_item_album" android:layout_width="@dimen/dp_34" android:layout_height="@dimen/dp_34" android:src="@drawable/album_square" android:layout_centerVertical="true" android:layout_marginStart="@dimen/dp_5" />
            <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginLeft="@dimen/dp_15" android:text="@string/photo" android:layout_toRightOf="@id/iv_item_album" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/rl_dialog_photo" android:background="@drawable/bg_three_icon" android:layout_width="fill_parent" android:layout_height="@dimen/dp_60" android:layout_marginLeft="@dimen/dp_6" android:layout_marginTop="@dimen/dp_5">
            <ImageView android:id="@id/iv_item_photo" android:layout_width="@dimen/dp_34" android:layout_height="@dimen/dp_34" android:src="@drawable/camera_square" android:layout_centerVertical="true" android:layout_marginStart="@dimen/dp_5" />
            <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginLeft="@dimen/dp_15" android:text="@string/picture" android:layout_toRightOf="@id/iv_item_photo" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/rl_dialog_video" android:background="@drawable/bg_three_icon" android:layout_width="fill_parent" android:layout_height="@dimen/dp_60" android:layout_marginLeft="@dimen/dp_6" android:layout_marginTop="@dimen/dp_5">
            <ImageView android:id="@id/iv_item_video" android:layout_width="@dimen/dp_34" android:layout_height="@dimen/dp_34" android:src="@drawable/video_square" android:layout_centerVertical="true" android:layout_marginStart="@dimen/dp_5" />
            <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginLeft="@dimen/dp_15" android:text="@string/video" android:layout_toRightOf="@id/iv_item_video" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
